syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AbilityInvokeEntry.proto";

// CmdId: 1137
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message ClientAbilityInitFinishNotify {
	uint32 entity_id = 13;
	repeated AbilityInvokeEntry invokes = 9;
}
